[package]
name = "breakout_zero"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pollster = "0.2"
env_logger = "0.10"
zero = { path = "../zero" }
wgpu = { version = "0.18" }
winit = { version = "0.29", default-features = false, features = ["rwh_05"] }
