[package]
name = "breakout_zero"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pollster = "0.2"
env_logger = "0.10"
zero = { git = "https://github.com/ShadowCurse/zero", rev = "bea049a3752375e1f66fe559116d783f92b7b3e2" }
bytemuck = { version = "1.14", features = [ "derive" ] }
